--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-ga": "^2.3.5",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "run": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
